[gd_scene load_steps=3 format=3 uid="uid://c4lvsnq5ef3lw"]

[ext_resource type="Script" path="res://Scripts/UI_Quests/book.gd" id="1_f22mp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4fur"]
bg_color = Color(0.945098, 0.780392, 0.592157, 1)

[node name="Book" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -228.0
offset_right = 30.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.04, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_c4fur")
script = ExtResource("1_f22mp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Title2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Pic" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
stretch_mode = 3

[node name="Text" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0

[node name="PrevPageButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "<"

[node name="NextPageButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = ">"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PrevPageButton" to="." method="_on_prev_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextPageButton" to="." method="_on_next_page_button_pressed"]
